<resources>
    <string name="app_name">Movies App</string>
    <string name="Nombre_pelicula">Nombre de la Pelicula</string>
    <string name="Director">Nombre del Director</string>
    <string name="mnu_mayuscula">Mayuscula</string>
    <string name="mnu_listado">Listado</string>
    <string name="mnucolores">Cambiar Color</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <string name="color_3">Color 3</string>
    <string name="color_4">Color 4</string>
    <string name="Eliminar">Eliminar</string>
</resources>
